--- a/Downloadr/Downloadr/View/Main.storyboard
+++ b/Downloadr/Downloadr/View/Main.storyboard
@@ -77,7 +77,19 @@
                             </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1iO-Cc-Z2S">
                                 <rect key="frame" x="0.0" y="20" width="375" height="64"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Downloadr" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r7F-DJ-vua">
+                                        <rect key="frame" x="146" y="22" width="83" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" red="0.97254901959999995" green="0.97254901959999995" blue="0.97254901959999995" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="r7F-DJ-vua" firstAttribute="centerY" secondItem="1iO-Cc-Z2S" secondAttribute="centerY" id="EoD-RH-pMg"/>
+                                    <constraint firstItem="r7F-DJ-vua" firstAttribute="centerX" secondItem="1iO-Cc-Z2S" secondAttribute="centerX" id="F2j-Qv-wwk"/>
+                                </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
